readme file edit and signup issues and api name
