# controllers/user.controllers.js
@@ -2,6 +2,10 @@ const User = require("../models/user.model");
 
 const getAllUserData = async (req, res) => {
   // #swagger.tags = ['User data']
+  /* #swagger.responses[200] = {
+            description: 'User get successfully.',
+            schema: { $ref: '#/definitions/User' }
+    } */
   try {
     const userData = await User.find({ email: req.params.email });
 
@@ -13,13 +17,18 @@ const getAllUserData = async (req, res) => {
 
 const createUserData = async (req, res) => {
   // #swagger.tags = ['User data']
-
+  /*    #swagger.parameters['obj'] = {
+                in: 'body',
+                description: 'Adding new user.',
+                schema: { $ref: '#/definitions/AddUser' }
+        } */
+  const { name, phone, email, image } = req.body;
   try {
     const newUser = new User({
-      name: req.body.name,
-      phone: req.body.phone,
-      email: req.body.email,
-      image: req.body.image,
+      name: name,
+      phone: phone,
+      email: email,
+      image: image,
     });
     await newUser.save();
     res.status(200).json(newUser);
@@ -30,6 +39,11 @@ const createUserData = async (req, res) => {
 
 const updateUserData = async (req, res) => {
   // #swagger.tags = ['User data']
+  /*    #swagger.parameters['obj'] = {
+                in: 'body',
+                description: 'Update user data.',
+                schema: { $ref: '#/definitions/UpdateUser' }
+        } */
   try {
     const userUpdate = await User.findOne({ _id: req.params.id });
     userUpdate.name = req.body.name;
