# swagger-outputfile.json
@@ -40,17 +40,6 @@
     "application/json"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api/user/{email}": {
       "get": {
         "tags": [
@@ -67,7 +56,10 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "User get successfully.",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           },
           "500": {
             "description": "Internal Server Error"
@@ -83,24 +75,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Adding new user.",
             "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "phone": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "image": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/AddUser"
             }
           }
         ],
@@ -128,18 +107,11 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Update user data.",
             "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "phone": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/UpdateUser"
             }
           }
         ],
@@ -175,7 +147,7 @@
         }
       }
     },
-    "/usersignup/": {
+    "/user-signup/": {
       "post": {
         "tags": [
           "User authentication"
@@ -183,18 +155,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "User Signup.",
             "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Signup"
             }
           }
         ],
@@ -208,7 +173,7 @@
         }
       }
     },
-    "/loginUser/": {
+    "/login-user/": {
       "post": {
         "tags": [
           "User authentication"
@@ -216,18 +181,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "User login.",
             "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Login"
             }
           }
         ],
@@ -244,7 +202,7 @@
         }
       }
     },
-    "/resetPassword/": {
+    "/reset-password/": {
       "post": {
         "tags": [
           "Reset password"
@@ -252,15 +210,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Send reset password email.",
             "schema": {
-              "type": "object",
-              "properties": {
-                "email": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/ResetPasswordSendEmail"
             }
           }
         ],
@@ -274,7 +228,7 @@
         }
       }
     },
-    "/resetPassword/{userId}/{token}": {
+    "/reset-password/{userId}/{token}": {
       "post": {
         "tags": [
           "Reset password"
@@ -294,15 +248,11 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "obj",
             "in": "body",
+            "description": "Set new password.",
             "schema": {
-              "type": "object",
-              "properties": {
-                "password": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/ResetPasswordSet"
             }
           }
         ],
@@ -322,34 +272,12 @@
       "type": "object",
       "properties": {
         "email": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "unique": {
-              "type": "boolean",
-              "example": true
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         },
         "password": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         }
       }
     },
@@ -357,30 +285,12 @@
       "type": "object",
       "properties": {
         "email": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         },
         "password": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         }
       }
     },
@@ -388,56 +298,20 @@
       "type": "object",
       "properties": {
         "name": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         },
         "phone": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         },
         "email": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         },
         "image": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         }
       }
     },
@@ -445,56 +319,51 @@
       "type": "object",
       "properties": {
         "name": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         },
         "phone": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         },
         "email": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "string"
         },
         "image": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "string"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
+          "type": "string",
+          "example": "image convert base64 string"
+        }
+      }
+    },
+    "UpdateUser": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "string"
+        },
+        "phone": {
+          "type": "string",
+          "example": "string"
+        }
+      }
+    },
+    "ResetPasswordSendEmail": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "example": "string"
+        }
+      }
+    },
+    "ResetPasswordSet": {
+      "type": "object",
+      "properties": {
+        "password": {
+          "type": "string",
+          "example": "string"
         }
       }
     }
